# Paper2Poster

./: README.md  pyproject.toml  requirements.txt  test_index_20250606_110301.json  test_integrated_pipeline.py  test_mistral_integration.py
PosterAgent/: mistral_ocr.py  parse_raw.py
debug_output/: llm_conversation_20250605_192517.json  llm_conversation_20250605_210124.json  llm_conversation_20250605_212311.json  llm_conversation_20250606_110301.json  ocr_output_20250605_192517.md  ocr_output_20250605_210124.md  ocr_output_20250605_212311.md  ocr_output_20250606_110301.md
issues/: NewFeatures: Paper2Poster Parser Pipeline - Mistral OCR Integration Issues.md  NewFeatures: Paper2Poster Parser Pipeline - Mistral OCR Integration PRD(1).md  NewFeatures: Paper2Poster Parser Pipeline - Mistral OCR Integration PRD(2).md  NewFeatures: Revised PDF-to-Markdown Parsing Pipeline(1).md  NewFeatures: Revised PDF-to-Markdown Parsing Pipeline(2).md
paper2poster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/paper_to_poster/: config.py  pdf_processor.py
utils/: poster_eval_utils.py
utils/src/: model_utils.py
utils/src/experiment/: preprocess.py
